[package]
name = "hoppy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hoppy"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = "0.20.0"
hop = { path = "/home/nzhang/Hop" }
dam = { path = "/home/nzhang/dam-rs" }
paste = "1.0.14"
